fresh install in preparation for schema registry